Centered Header container navigation to a fixed width so nav links dont spread too far out on larger displays. Same for the second header row. Removed some empty whitespaces. Evened out the padding bottom on the business account container and faq container so they are aligned.

--- a/src/containers/Products/Reduce/FaqStyles.css
+++ b/src/containers/Products/Reduce/FaqStyles.css
@@ -1,3 +1,7 @@
+.faq-container {
+  padding-top: 30px;
+}
+
 .faq-title {
   text-align: left;
   font-weight: 600;
